Update name indexer and send back cloudevents
