# docs/swagger.yaml
@@ -1,11 +1,56 @@
 definitions:
-  indexrepo.DataObject:
+  cloudevent.CloudEvent-json_RawMessage:
     properties:
       data:
+        description: Data contains domain-specific information about the event.
         items:
           type: integer
         type: array
-      indexKey:
+      datacontenttype:
+        description: |-
+          DataContentType is an optional MIME type for the data field. We almost
+          always serialize to JSON and in that case this field is implicitly
+          "application/json".
+        type: string
+      dataschema:
+        description: DataSchema is an optional URI pointing to a schema for the data
+          field.
+        type: string
+      dataversion:
+        description: DataVersion is the version of the data type.
+        type: string
+      id:
+        description: |-
+          ID is an identifier for the event. The combination of ID and Source must
+          be unique.
+        type: string
+      producer:
+        description: Producer is a specific instance, process or device that creates
+          the data structure describing the CloudEvent.
+        type: string
+      source:
+        description: Source is the context in which the event happened. In a distributed
+          system it might consist of multiple Producers.
+        type: string
+      specversion:
+        description: |-
+          SpecVersion is the version of CloudEvents specification used.
+          This is always hardcoded "1.0".
+        type: string
+      subject:
+        description: |-
+          Subject is an optional field identifying the subject of the event within
+          the context of the event producer. In practice, we always set this.
+        type: string
+      time:
+        description: |-
+          Time is an optional field giving the time at which the event occurred. In
+          practice, we always set this.
+        type: string
+      type:
+        description: |-
+          Type describes the type of event. It should generally be a reverse-DNS
+          name.
         type: string
     type: object
   internal_fetch_httphandler.indexKeyResponse:
@@ -180,7 +225,7 @@ paths:
         "200":
           description: Returns latest object data
           schema:
-            $ref: '#/definitions/indexrepo.DataObject'
+            $ref: '#/definitions/cloudevent.CloudEvent-json_RawMessage'
         "400":
           description: Invalid request
           schema:
@@ -233,7 +278,7 @@ paths:
           description: Returns latest object data
           schema:
             items:
-              $ref: '#/definitions/indexrepo.DataObject'
+              $ref: '#/definitions/cloudevent.CloudEvent-json_RawMessage'
             type: array
         "400":
           description: Invalid request
