# internal/fetch/httphandler/httphandler.go
@@ -161,7 +161,7 @@ func (h *Handler) GetIndexKeys(fCtx *fiber.Ctx) error {
 // @Produce json
 // @Param params query searchParams false "Search parameters"
 // @Param tokenId path string true "Token ID"
-// @Success 200 {object} []indexrepo.DataObject "Returns latest object data"
+// @Success 200 {object} []cloudevent.CloudEvent[json.RawMessage] "Returns latest object data"
 // @Failure 400 {object} map[string]string "Invalid request"
 // @Failure 500 {object} map[string]string "Server error"
 // @Router /v1/vehicle/objects/{tokenId} [get]
@@ -200,7 +200,7 @@ func (h *Handler) GetObjects(fCtx *fiber.Ctx) error {
 // @Produce json
 // @Param params query searchParams false "Search parameters"
 // @Param tokenId path string true "Token ID"
-// @Success 200 {object} indexrepo.DataObject "Returns latest object data"
+// @Success 200 {object} cloudevent.CloudEvent[json.RawMessage] "Returns latest object data"
 // @Failure 400 {object} map[string]string "Invalid request"
 // @Failure 500 {object} map[string]string "Server error"
 // @Router /v1/vehicle/latest-object/{tokenId} [get]
